# MasterThesis

small_progs/detecting/: .gitignore  CMakeLists.txt  main.cpp
small_progs/matching/: CMakeLists.txt  main.cpp
